crates/pixi_manifest/src/snapshots/pixi_manifest__system_requirements__tests__lic_misspelled.snap
---
source: crates/pixi_manifest/src/system_requirements.rs
assertion_line: 309
expression: "\n        [system-requirements.lic]\n        version = \"2.12\"\n        family = \"glibc\"\n        "
---
TOML parse error at line 2, column 30
  |
2 |         [system-requirements.lic]
  |                              ^^^
unknown field `lic`, expected one of `macos`, `linux`, `cuda`, `libc`, `archspec`
